--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Tired of bad news everyday? Sick of reading Drudge Report and finding out how the world is going to hell? This site is meant to provide a look at the positive news happening in the world!</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
