--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="main_content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<h3>Welcome to your daily Good Deed.</h3>
 
 <p>Tired of bad news everyday? Sick of reading Drudge Report and finding out how the world is going to hell? This site is meant to provide a look at the positive news happening in the world!</p>
 
