--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <p>Tired of bad news everyday? Sick of reading Drudge Report and finding out how the world is going to hell? This site is meant to provide a look at the positive news happening in the world!</p>
 
-<pre><code>$ FEATURED GOOD NEWS STORY OF THE DAY
+<pre><code><b></b> FEATURED GOOD NEWS STORY OF THE DAY <b/>
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
