--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 
 <p>Tired of bad news everyday? Sick of reading Drudge Report and finding out how the world is going to hell? This site is meant to provide a look at the positive news happening in the world!</p>
 
-<pre><code><b></b> FEATURED GOOD NEWS STORY OF THE DAY <b/>
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code><b><bold> FEATURED GOOD NEWS STORY OF THE DAY </bold>
+
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
