--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Every day, we scour the globe to bring you news that is uplifting and encouraging!</p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
