--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>The Good Deed Guru</h1>
-          <h2>The Good Deed</h2>
+          <h2>Focus on the positive</h2>
         </header>
 
         <section id="main_content">
