--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 
              </header>
 
-             <img src="shutterstock_785875597.eps" class="img-fluid" />
+             <img src="good_deed_logo.png" class="img-fluid" />
 
              <section id="main_content">
      <h3><strong>Welcome to your daily Good Deed!</strong></h3>
