--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
            <div class="inner">
 
              <header>
-               <h1>The Good Deed Guru</h1>
+               <h1>THE GOOD DEED GURU</h1>
 
              </header>
 
