--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ body {
 
        <ul>
        <li><a href="http://www.google.com" target="_blank">"SITE OF THE DAY"</a></li>
+       <li><a href="http://www.google.com" target="_blank">"SITE OF THE DAY"</a></li>
+       <li><a href="http://www.google.com" target="_blank">"SITE OF THE DAY"</a></li>
 
      </div>
 
