--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@ body {
 
      <pre><code><b><bold> FEATURED GOOD NEWS STORY OF THE DAY </bold>
 
-       <ul>
+       <ul style="list-style-type:square">
        <li><a href="http://www.google.com" target="_blank">"SITE OF THE DAY"</a></li>
+       </ul>
+       
+       <pre><code><b><bold> PAST NEWS </bold>
+       <ul style="list-style-type:square">
        <li><a href="http://www.google.com" target="_blank">"SITE OF THE DAY"</a></li>
        <li><a href="http://www.google.com" target="_blank">"SITE OF THE DAY"</a></li>
 
