--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <title>The Good Deed Guru by mkramer007@hotmail.com</title>
+    <title>The Good Deed Guru</title>
        </head>
        <html>
 <head>
